--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
-    {
-      "extends": ["next/core-web-vitals"], 
-      "rules": {
-        "no-unescaped-entities": "off" // Disable the rule here
-      }
-    }
+{
+  "extends": "next",
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
+  }
+}
