--- a/package.json
+++ b/package.json
@@ -45,12 +45,14 @@
     "embla-carousel-react": "^8.2.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.439.0",
+    "mapbox-gl": "^3.6.0",
     "next": "14.2.9",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-map-gl": "^7.1.7",
     "react-resizable-panels": "^2.1.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
