--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-google-maps/api": "^2.19.3",
     "@turf/turf": "^7.1.0",
+    "@types/google.maps": "^3.58.0",
     "@types/mapbox-gl": "^3.4.0",
     "@vercel/speed-insights": "^1.0.12",
     "class-variance-authority": "^0.7.0",
