--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-google-maps/api": "^2.19.3",
+    "@svgr/webpack": "^8.1.0",
     "@turf/turf": "^7.1.0",
     "@types/google.maps": "^3.58.0",
     "@types/mapbox-gl": "^3.4.0",
@@ -49,6 +50,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.1",
+    "framer-motion": "^11.5.4",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.439.0",
     "mapbox-gl": "^3.6.0",
